recursion.lessons.recursion.koch.Koch.scala.error
Koch:16: error: not found: value sonwSide
		case _ => sonwSide(levels-1,length/3)
                          ^